--- a/KM/KM/.obsidian/workspace
+++ b/KM/KM/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Bioinformatics.md",
-            "mode": "source",
+            "file": "Bioinformatics/Bioinformatics.md",
+            "mode": "preview",
             "source": false
           }
         }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Bioinformatics.md",
+                "file": "Bioinformatics/Bioinformatics.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Bioinformatics.md",
+                "file": "Bioinformatics/Bioinformatics.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Bioinformatics.md"
+                "file": "Bioinformatics/Bioinformatics.md"
               }
             }
           }
@@ -125,9 +125,10 @@
       }
     ],
     "direction": "horizontal",
-    "width": 300,
-    "collapsed": true
+    "width": 300
   },
-  "active": "184e0a6af209b33e",
-  "lastOpenFiles": []
+  "active": "596ae0575060fadd",
+  "lastOpenFiles": [
+    "Bioinformatics/Bioinformatics.md"
+  ]
 }
