--- a/KM/.obsidian/workspace
+++ b/KM/.obsidian/workspace
@@ -127,8 +127,9 @@
     "direction": "horizontal",
     "width": 300
   },
-  "active": "596ae0575060fadd",
+  "active": "184e0a6af209b33e",
   "lastOpenFiles": [
+    "BI/Untitled.md",
     "Bioinformatics/Notes/Bioinformatics.md"
   ]
 }
