--- a/KM/.obsidian/app.json
+++ b/KM/.obsidian/app.json
@@ -1,4 +1,5 @@
 {
   "showUnsupportedFiles": true,
-  "attachmentFolderPath": "./attachments"
+  "attachmentFolderPath": "./attachments",
+  "alwaysUpdateLinks": true
 }
