--- a/KM/.obsidian/workspace
+++ b/KM/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Bioinformatics/Notes/Bioinformatics.md",
-            "mode": "source",
+            "file": "Knowledge Management.md",
+            "mode": "preview",
             "source": false
           }
         }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Bioinformatics/Notes/Bioinformatics.md",
+                "file": "Knowledge Management.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Bioinformatics/Notes/Bioinformatics.md",
+                "file": "Knowledge Management.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Bioinformatics/Notes/Bioinformatics.md"
+                "file": "Knowledge Management.md"
               }
             }
           }
@@ -129,8 +129,11 @@
   },
   "active": "6a42e527edd1537a",
   "lastOpenFiles": [
+    "Bioinformatics/Notes/What is Bioinformatics.md",
+    "Knowledge Management.md",
+    "Utility/Useful Links.md",
+    "Bioinformatics/Notes/Bioinformatics Tutorials.md",
     "attachments/20220818080615.png.md",
-    "Bioinformatics/Notes/Bioinformatics.md",
     "KM/Bioinformatics/Notes/attachments/Pasted 2.md",
     "KM/Bioinformatics/Notes/attachments/Pasted 1.md",
     "KM/Bioinformatics/Notes/attachments/Pasted.md",
