--- a/KM/.obsidian/app.json
+++ b/KM/.obsidian/app.json
@@ -1,5 +1,5 @@
 {
-  "showUnsupportedFiles": true,
+  "showUnsupportedFiles": false,
   "attachmentFolderPath": "./attachments",
   "alwaysUpdateLinks": true
 }
