--- a/KM/.obsidian/workspace
+++ b/KM/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "d6a544aabdde8600",
+        "id": "54c62e436033f6d1",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Bioinformatics/Notes/01 What is Bioinformatics.md.md",
+            "file": "README.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Bioinformatics/Notes/01 What is Bioinformatics.md.md",
+                "file": "README.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Bioinformatics/Notes/01 What is Bioinformatics.md.md",
+                "file": "README.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "Bioinformatics/Notes/01 What is Bioinformatics.md.md"
+                "file": "README.md"
               }
             }
           }
@@ -128,12 +128,13 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "d6a544aabdde8600",
+  "active": "54c62e436033f6d1",
   "lastOpenFiles": [
+    "Bioinformatics/Notes/01 What is Bioinformatics.md",
+    "README.md",
+    "Bioinformatics.md",
     "Bioinformatics/Notes/Ref Bioinformatics Books.md",
     "Bioinformatics/Notes/Ref Bioinformatics Tutorials.md",
-    "Bioinformatics/Notes/01 What is Bioinformatics.md.md",
-    "README.md",
     "Bioinformatics/Notes/What is Bioinformatics.md",
     "Utility/Useful Links.md",
     "Utility/ToDO List.md"
