--- a/KM/.obsidian/workspace
+++ b/KM/.obsidian/workspace
@@ -130,15 +130,15 @@
   },
   "active": "3505a5549469e1ac",
   "lastOpenFiles": [
-    "Bioinformatics/Notes/04 Analysis Tools.md",
-    "Bioinformatics/Notes/Ref Bioinformatics Books.md",
+    "Bioinformatics/Books/Introduction to Bioinformatics Algorithms.md",
+    "Bioinformatics/Notes/01 What is Bioinformatics.md",
     "Bioinformatics/Notes/Ref Bioinformatics Tutorials.md",
+    "README.md",
+    "Bioinformatics/Notes/Ref Bioinformatics Books.md",
+    "Bioinformatics/Notes/04 Analysis Tools.md",
     "Bioinformatics/attachments/20220818162400.png",
     "Bioinformatics/attachments/20220818162024.png",
-    "README.md",
     "Utility/Useful Links.md",
-    "Utility/ToDO List.md",
-    "Bioinformatics/Notes/02 Environment.md",
-    "Bioinformatics/Notes/03 Data.md"
+    "Utility/ToDO List.md"
   ]
 }
