--- a/KM/.obsidian/workspace
+++ b/KM/.obsidian/workspace
@@ -7,12 +7,8 @@
         "id": "3505a5549469e1ac",
         "type": "leaf",
         "state": {
-          "type": "markdown",
-          "state": {
-            "file": "Bioinformatics/Notes/Ref Bioinformatics Books.md",
-            "mode": "source",
-            "source": false
-          }
+          "type": "graph",
+          "state": {}
         }
       }
     ],
@@ -77,7 +73,6 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Bioinformatics/Notes/Ref Bioinformatics Books.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +89,6 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "Bioinformatics/Notes/Ref Bioinformatics Books.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -116,9 +110,7 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {
-                "file": "Bioinformatics/Notes/Ref Bioinformatics Books.md"
-              }
+              "state": {}
             }
           }
         ]
