--- a/KM/.obsidian/workspace
+++ b/KM/.obsidian/workspace
@@ -7,8 +7,12 @@
         "id": "3505a5549469e1ac",
         "type": "leaf",
         "state": {
-          "type": "graph",
-          "state": {}
+          "type": "markdown",
+          "state": {
+            "file": "Bioinformatics/Books/Introduction to Bioinformatics Algorithms.md",
+            "mode": "source",
+            "source": false
+          }
         }
       }
     ],
@@ -73,6 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
+                "file": "Bioinformatics/Books/Introduction to Bioinformatics Algorithms.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -89,6 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
+                "file": "Bioinformatics/Books/Introduction to Bioinformatics Algorithms.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -110,7 +116,9 @@
             "type": "leaf",
             "state": {
               "type": "outline",
-              "state": {}
+              "state": {
+                "file": "Bioinformatics/Books/Introduction to Bioinformatics Algorithms.md"
+              }
             }
           }
         ]
@@ -122,8 +130,8 @@
   },
   "active": "3505a5549469e1ac",
   "lastOpenFiles": [
-    "Bioinformatics/Books/Introduction to Bioinformatics Algorithms.md",
     "Bioinformatics/Notes/Ref Bioinformatics Books.md",
+    "Bioinformatics/Books/Introduction to Bioinformatics Algorithms.md",
     "Bioinformatics/Notes/01 What is Bioinformatics.md",
     "Bioinformatics/Notes/Ref Bioinformatics Tutorials.md",
     "README.md",
