--- a/KM/.obsidian/workspace
+++ b/KM/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "README.md",
+            "file": "Bioinformatics/Books/Introduction to Bioinformatics Algorithms.md",
             "mode": "source",
             "source": false
           }
@@ -77,7 +77,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "README.md",
+                "file": "Bioinformatics/Books/Introduction to Bioinformatics Algorithms.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,7 +94,7 @@
             "state": {
               "type": "outgoing-link",
               "state": {
-                "file": "README.md",
+                "file": "Bioinformatics/Books/Introduction to Bioinformatics Algorithms.md",
                 "linksCollapsed": false,
                 "unlinkedCollapsed": true
               }
@@ -117,7 +117,7 @@
             "state": {
               "type": "outline",
               "state": {
-                "file": "README.md"
+                "file": "Bioinformatics/Books/Introduction to Bioinformatics Algorithms.md"
               }
             }
           }
@@ -128,73 +128,17 @@
     "width": 300,
     "collapsed": true
   },
-  "floating": {
-    "id": "21ce43ffbfad4393",
-    "type": "floating",
-    "children": [
-      {
-        "id": "a0fe278653adb7e2",
-        "type": "window",
-        "children": [
-          {
-            "id": "c0eab640ddad8b56",
-            "type": "leaf",
-            "state": {
-              "type": "markdown",
-              "state": {
-                "file": "Utilities/MathJax-LaTeX.md",
-                "mode": "source",
-                "source": false
-              }
-            }
-          }
-        ],
-        "direction": "vertical",
-        "x": 231,
-        "y": 98,
-        "width": 1000,
-        "height": 565,
-        "maximize": false,
-        "zoom": 0
-      },
-      {
-        "id": "bd38897913d876fa",
-        "type": "window",
-        "children": [
-          {
-            "id": "9759e054e865d1fa",
-            "type": "leaf",
-            "state": {
-              "type": "markdown",
-              "state": {
-                "file": "Utilities/Markdown.md",
-                "mode": "source",
-                "source": false
-              }
-            }
-          }
-        ],
-        "direction": "vertical",
-        "x": 331,
-        "y": 101,
-        "width": 1023,
-        "height": 560,
-        "maximize": false,
-        "zoom": 0
-      }
-    ]
-  },
   "active": "4e5259acf9baf0d2",
   "lastOpenFiles": [
-    "Utilities/ToDO List.md",
-    "README.md",
-    "Utilities/Markdown.md",
+    "Bioinformatics/Notes/01 What is Bioinformatics.md",
     "Utilities/MathJax-LaTeX.md",
+    "Utilities/Markdown.md",
+    "README.md",
+    "Utilities/ToDO List.md",
     "Bioinformatics/Books/Introduction to Bioinformatics Algorithms.md",
     "Bioinformatics/Notes/Ref Bioinformatics Tutorials.md",
     "Bioinformatics/Notes/Ref Bioinformatics Books.md",
     "Bioinformatics/Notes/04 Analysis Tools.md",
-    "Utilities/Useful Links.md",
-    "Bioinformatics/Notes/01 What is Bioinformatics.md"
+    "Utilities/Useful Links.md"
   ]
 }
