--- a/KM/.obsidian/workspace
+++ b/KM/.obsidian/workspace
@@ -130,15 +130,15 @@
   },
   "active": "4e5259acf9baf0d2",
   "lastOpenFiles": [
-    "Bioinformatics/Books/An Introduction to Bioinformatics Algorithms (EN).md",
+    "Utilities/Markdown.md",
+    "Utilities/Useful Links.md",
     "README.md",
     "Bioinformatics/Books/Human Evolutionary Genetics (EN).md",
     "Bioinformatics/Books/An Introduction to Bioinformatics Algorithms (JA).md",
+    "Bioinformatics/Books/An Introduction to Bioinformatics Algorithms (EN).md",
     "2022-09-18.md",
     "Bioinformatics/Notes/01 Bioinformatics.md",
     "Bioinformatics/Notes/Ref Bioinformatics Books.md",
-    "Bioinformatics/attachments/Books/_cover/Human Evolutionary Genetics.png",
-    "Bioinformatics/attachments/20220818162904.png",
-    "Utilities/MathJax-LaTeX.md"
+    "Bioinformatics/attachments/Books/_cover/Human Evolutionary Genetics.png"
   ]
 }
